<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/nav_icon_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/nav_icon_playlist_selector"
        android:title="@string/playlist" />

    <item
        android:id="@+id/menu_dummy"
        android:enabled="false"
        android:icon="@android:color/transparent"
        android:title="" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/nav_icon_history_selector"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/nav_icon_profile_selector"
        android:title="@string/profile" />
</menu>
