<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.ui.MainActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/banner_card"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ReusableFilledButton"
        android:text="@string/log_in"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ReusableOutlinedButton"
        app:icon="@drawable/google"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continue_with_google"
        />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        layout="@layout/music_card"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        layout="@layout/song_item"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        layout="@layout/circular_image_music_item"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_email"
        style="@style/RoundedEditText"
        android:layout_margin="20dp"/>
</LinearLayout>